# FastAPI_Template

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/api/endpoints/: admin.py  auth.py  common.py
app/core/: auth.py  config.py  db.py
app/crud/: admin.py
app/models/: admin.py
app/schemas/: admin.py  auth.py
app/utils/: response_models.py  security.py
